Refactor LilLexiDoc.java