@@ -1,7 +1,10 @@
-/**
- * Lil Lexi Document Model
- * 
- */
+
+/*
+*  Name: Marin Maksutaj & Shyambhavi 
+*  Course: CSC352
+*  Description: This file contains the main classes and methods used to implement the Lil Lexi Document Editor.
+*/
+
 import java.util.List;
 import java.util.Set;
 import java.io.BufferedReader;
@@ -15,52 +18,45 @@ import org.eclipse.swt.graphics.*;
 
 
 /**
- * LilLexiDoc uses the Glyph class and Composite pattern
+ * LilLexiDoc is the class used to represent the document. It contains
+ * the Composit pattern and the Glyphs that are added to the document.
  */
 public class LilLexiDoc 
 {
 	private LilLexiUI ui;
-	private String docName;
-	private int pageWidth;
-	private int pageHeight;
-	private int numColumns;
-	private Point cursorPosition;
 	private Composition composition;
 	private Compositor compositor;
+
 	/**
-	 * Ctor
+	 * Constructor for LilLexiDoc
 	 */
 	public LilLexiDoc() 
 	{
-		docName = "Untitled";
-		pageWidth = 800;
-		pageHeight = 800;
-		numColumns = 40;
-		cursorPosition = new Point(0,0);
 		composition = new Composition();
 		compositor = new SimpleCompositor();
 	
 	}
 	
 	/**
-	 * setUI
+	 * setter for the UI
 	 */
 	public void setUI(LilLexiUI ui) {this.ui = ui;}
 
 	/**
-	 * add a char
+	 * Method to add a char glyph to the document
 	 */
 	public void addCharGlyph(char c, RGB color, String fontName, int fontSize)
 	{
 		CharGlyph cg = new CharGlyph(c);
 		cg.setColor(color);
 		cg.setFont(fontName);
-		cg.setSize(fontSize);;
+		cg.setSize(fontSize);
 		composition.add(cg);
 	}
 
 	/**
-	 * add a rectangle
+	 * Method to add a rectangle glyph to the document. 
+	 * It takes in the border and fill colors.
 	 */
 	public void addRectGlyph(RGB borderColor, RGB fillColor)
 	{
@@ -70,6 +66,10 @@ public class LilLexiDoc
 		composition.add(rg);
 	}
 
+	/**
+	 * Method to add a rectangle glyph to the document.
+	 * It takes in the border and fill colors and the end point.
+	 */
 	public void addRectGlyph(Point endPoint, RGB borderColor, RGB fillColor) {
 		RectGlyph rg = new RectGlyph();
 		rg.setFillColor(fillColor);
@@ -79,7 +79,8 @@ public class LilLexiDoc
 	}
 	
 	/**
-     * add a triangle
+     * Method to add a triangle glyph to the document.
+	 * It takes in the border and fill colors.
      */
     public void addTriangleGlyph(RGB borderColor, RGB fillColor)
     {
@@ -89,7 +90,10 @@ public class LilLexiDoc
         composition.add(tg);
     }
     
-
+	/**
+	 * Method to add a triangle glyph to the document.
+	 * It takes in the border and fill colors and the end point.	
+	 */
     public void addTriangleGlyph(Point endPoint, RGB borderColor, RGB fillColor)
     {
         TriangleGlyph tg = new TriangleGlyph();
@@ -100,7 +104,8 @@ public class LilLexiDoc
     }
 	
 	/**
-     * add a circle
+     * Method to add a circle glyph to the document.
+	 * It takes in the border and fill colors.
      */
     public void addCircleGlyph(RGB borderColor, RGB fillColor)
     {
@@ -110,6 +115,10 @@ public class LilLexiDoc
         composition.add(cg);
     }
 
+	/**
+	 * Method to add a circle glyph to the document.
+	 * It takes in the border and fill colors and the end point.
+	 */
     public void addCircleGlyph(Point endPoint, RGB borderColor, RGB fillColor) {
         CircleGlyph cg = new CircleGlyph();
         cg.setFillColor(fillColor);
@@ -120,47 +129,67 @@ public class LilLexiDoc
     }
 
 	/**
-	 * add an image
+	 * Method to add an image glyph to the document.
+	 * It takes in the image path.
 	 */
 	public void addImageGlyph(String fileName) 
 	{
 		ImageGlyph ig = new ImageGlyph(fileName, 100, 100);
 		composition.add(ig);
 	} 
+
+	/**
+	 * Method to add an image glyph to the document.
+	 * It takes in the image path and the end point.
+	 */
 	public void addImageGlyph(Point endPoint, String fileName) {
 		ImageGlyph ig = new ImageGlyph(fileName, 100, 100);
 		ig.setEndPoint(endPoint);
 		composition.add(ig);
 	}
-	public String getDocName(){return docName;}
-	public int getPageWidth(){return pageWidth;}
-	public int getPageHeight(){return pageHeight;}
-	public int getNumColumns(){return numColumns;}
-	public Point getCursorPosition(){return cursorPosition;}
+
+	/**
+	 * getter for the composition
+	 */
 	public Composition getComposition(){return composition;}
+
+	/**
+	 * getter for the compositor
+	 */
 	public Compositor getCompositor(){return compositor;}
-	public void setDocName(String docName){this.docName = docName;}
-	public void setPageWidth(int pageWidth){this.pageWidth = pageWidth;}
-	public void setPageHeight(int pageHeight){this.pageHeight = pageHeight;}
-	public void setNumColumns(int numColumns){this.numColumns = numColumns;}
-	public void setCursorPosition(Point cursorPosition){this.cursorPosition = cursorPosition;}
+
+	/**
+	 * Method to set the composition
+	 */
 	public void setComposition(Composition composition){this.composition = composition;}
+
+	/**
+	 * Method to set the compositor
+	 */
 	public void setCompositor(Compositor compositor){this.compositor = compositor;}
+
+	/**
+	 * Method to backspace a glyph
+	 */
 	public void backspace()
 	{
 			compositor.backspace(composition);
 	}
+
+	/**
+	 * Method to line break a glyph
+	 */
 	public void lineBreak()
 	{
 		compositor.lineBreak(composition);
 	}
 
 	/**
-	 * toString
+	 * toString method for the document
 	 */
 	public String toString()
 	{
-		String s = "LilLexiDoc: " + docName + " " + pageWidth + " " + pageHeight + " " + numColumns + " " + cursorPosition;
+		String s = "LilLexiDoc: ";
 		for (Glyph g: composition.getGlyphs())
 		{
 			s += g.toString();
@@ -169,7 +198,7 @@ public class LilLexiDoc
 	}
 
 	/**
-	 * draw
+	 * draw method for the document. Calls the compose method of the compositor.
 	 */
 	public void draw()
 	{
@@ -178,46 +207,57 @@ public class LilLexiDoc
 		
 	}
 
+	/**
+	 * Method to undo the last action
+	 */
 	public void undo() {
 		compositor.undo(composition);
 	}
 
+	/**
+	 * Method to redo the last action
+	 */
 	public void redo() {
 		compositor.redo(composition);
 	}
 }
 
 
-/**
- * Point
- */
-
-
 
 
 /**
- * Glyph
+ * Glyph class for the LilLexi project. It is an abstract class.
+ * It is used by the other glyph classes to implement the methods.
  */
 abstract class Glyph
 {
 	private Point pos;
 
 	/**
-	 * Ctor
+	 * Constructor for the glyph class
 	 */
 	public Glyph() 
 	{
 		pos = new Point(0,0);
 	}
+
+	/**
+	 * Constructor for the glyph class. It takes in the position of the glyph.
+	 */
 	public Glyph(Point pos) 
 	{
 		this.pos = pos;
 	}
+
+	/**
+	 * getter for the position of the glyph
+	 */
 	public Point getPos(){return pos;}
 }
 
 /**
- * Compositor
+ * Compositor class for the LilLexi project. It is an interface.
+ * It is used by the other compositor classes to implement the methods.
  */
 interface Compositor
 {
@@ -231,19 +271,20 @@ interface Compositor
 
 /**
  * Simple Compositor 
- * It is used to just draw the glyphs in the order they were added to the composition
+ * It is used to just draw the glyphs in the order they were added to the composition.
  */
 class SimpleCompositor implements Compositor
 {
-	/**
-	 * compose
-	 */
+
 	private LilLexiUI ui;
 	private Point cursor;
 	private List<Point> previousPositions;
 	private int yOffSet;
 	private List<Integer> previousYOffSets;
 	
+	/**
+	 * Constructor for the Simple Compositor
+	 */
 	public SimpleCompositor () {
 		this.cursor = new Point(0, 0);
 		this.previousPositions = new ArrayList<Point>();
@@ -251,22 +292,25 @@ class SimpleCompositor implements Compositor
 		this.previousYOffSets = new ArrayList<Integer>();
 	}
 
+	/**
+	 * Method to undo the last action
+	 */
 	public void undo (Composition c) {
 		if (!TimeMachine.getInstance().canUndo()) {
 			return;
 		}
-		System.out.println("undoin");
 		TimeMachine.getInstance().undo();
-		// perform a deep copy of the current time machine state
-		Point newCursor = new Point(TimeMachine.getInstance().getCursor().getX(), TimeMachine.getInstance().getCursor().getY());
-		int newYOffSet = new Integer(TimeMachine.getInstance().getYOffSet());
+		// perform a deep copy of the current time machine state, and set it as the composition
+		Point newCursor = new Point(TimeMachine.getInstance().getCursor().getX(), 
+		TimeMachine.getInstance().getCursor().getY());
+		int newYOffSet = Integer.valueOf(TimeMachine.getInstance().getYOffSet());
 		List<Glyph> newGlyphs = new ArrayList<Glyph>();
 		for (Glyph g : TimeMachine.getInstance().getGlyphs()) {
 			newGlyphs.add(g);
 		}
 		List<Integer> newPreviousYOffSets = new ArrayList<Integer>();
 		for (Integer i : TimeMachine.getInstance().getPreviousYOffSets()) {
-			newPreviousYOffSets.add(new Integer(i));
+			newPreviousYOffSets.add(Integer.valueOf(i));
 		}
 		List<Point> newPreviousPositions = new ArrayList<Point>();
 		for (Point p : TimeMachine.getInstance().getPreviousPositions()) {
@@ -280,21 +324,25 @@ class SimpleCompositor implements Compositor
 		this.previousPositions = newPreviousPositions;
 	}
 
+	/**
+	 * Method to redo the last action
+	 */
 	public void redo (Composition c) {
 		if (!TimeMachine.getInstance().canRedo()) {
 			return;
 		}
 		TimeMachine.getInstance().redo();
 		// perform a deep copy of the current time machine state
-		Point newCursor = new Point(TimeMachine.getInstance().getCursor().getX(), TimeMachine.getInstance().getCursor().getY());
-		int newYOffSet = new Integer(TimeMachine.getInstance().getYOffSet());
+		Point newCursor = new Point(TimeMachine.getInstance().getCursor().getX(), 
+		TimeMachine.getInstance().getCursor().getY());
+		int newYOffSet = Integer.valueOf(TimeMachine.getInstance().getYOffSet());
 		List<Glyph> newGlyphs = new ArrayList<Glyph>();
 		for (Glyph g : TimeMachine.getInstance().getGlyphs()) {
 			newGlyphs.add(g);
 		}
 		List<Integer> newPreviousYOffSets = new ArrayList<Integer>();
 		for (Integer i : TimeMachine.getInstance().getPreviousYOffSets()) {
-			newPreviousYOffSets.add(new Integer(i));
+			newPreviousYOffSets.add(Integer.valueOf(i));
 		}
 		List<Point> newPreviousPositions = new ArrayList<Point>();
 		for (Point p : TimeMachine.getInstance().getPreviousPositions()) {
@@ -308,13 +356,17 @@ class SimpleCompositor implements Compositor
 		this.previousPositions = newPreviousPositions;
 	}
 
+	/**
+	 * Method to add the UI to the compositor
+	 */
 	public void addUI (LilLexiUI ui) {this.ui = ui;}
+
+	/**
+	 * Method to backspace the last glyph
+	 */
 	public void backspace (Composition c) {
 		
-		spellCheck(c); // should we put it somewhere else?
-		System.out.println("Size of glyphs " + c.getGlyphs().size());
-		System.out.println("size of previous positions: " + previousPositions.size());
-		System.out.println("size of previous y offsets: " + previousYOffSets.size());
+		spellCheck(c); 
 		if (cursor.getX() == 0 && cursor.getY() == 0) {
 			return;
 		}
@@ -334,6 +386,10 @@ class SimpleCompositor implements Compositor
 		previousYOffSets.remove(previousYOffSets.size()-1);
 	
 	}
+
+	/**
+	 * Method to add a line break
+	 */
 	public void lineBreak (Composition c) {
 		
 		spellCheck(c);
@@ -351,31 +407,23 @@ class SimpleCompositor implements Compositor
 		this.yOffSet = 30;
 		
 	}
+
+	/**
+	 * Method to compose the composition
+	 */
 	public void compose(Composition c)
 	{
 		
 	    spellCheck(c);
 		List<Glyph> glyphs = c.getGlyphs();
-		//System.out.println(glyphs.size());
-		//System.out.println(cursor.getX());
-		//System.out.println(cursor.getY());
 		for (Glyph g: glyphs)
 		{
 			if (g.getPos() != null)
 			{
-				//System.out.println("Non null pos:" + g.getPos().getX() + " " + g.getPos().getY());
-				//System.out.println("hello");
 				continue;
 			}
 			previousPositions.add(new Point(cursor.getX(), cursor.getY()));
 			previousYOffSets.add(yOffSet);
-			
-			// check what type of glyph it is and draw it
-			// if it is a character glyph, draw it, move the cursor by a fixed amount and continue
-			// if it is a rectangle glyph, draw it and continue, move the cursor by a the width of the rectangle
-			// if it is an image glyph, draw it and continue, move the cursor by a the width of the image
-			// if cursor reaches the end of the line, move it to the next line
-			// if cursor reaches the end of the page, don't draw anything
 
 			if (g instanceof CharGlyph)
 			{
@@ -501,10 +549,14 @@ class SimpleCompositor implements Compositor
 			}
 		}
 		// add previous state in TimeMachine
-		TimeMachine.getInstance().addState(cursor, previousPositions, yOffSet, previousYOffSets, c.getGlyphs());
+		TimeMachine.getInstance().addState(cursor, previousPositions, yOffSet, 
+		previousYOffSets, c.getGlyphs());
 		
 	}
 
+	/**
+	 * Method to spell check the text in the text editor.
+	 */
 	public void spellCheck(Composition c)
 	{
 		
@@ -545,14 +597,16 @@ class SimpleCompositor implements Compositor
 
 
 
-
+/*
+ * Point class used to store the position of a glyph.
+ */
 class Point
 {
 	private int x;
 	private int y;
 	
 	/**
-	 * Ctor
+	 * Constructor for Point class.
 	 */
 	public Point(int x, int y)
 	{
@@ -561,7 +615,7 @@ class Point
 	}
 	
 	/**
-	 * gets
+	 * getters and setters
 	 */
 	public int getX(){return x;}
 	public int getY(){return y;}
@@ -570,12 +624,15 @@ class Point
 }
 
 
+/*
+ * Composition class used to store the glyphs in a composition.
+ */
 class Composition
 {
 	private List<Glyph> glyphs;
 	
 	/**
-	 * Ctor
+	 * Constructor for Composition class.
 	 */
 	public Composition() 
 	{
@@ -583,7 +640,7 @@ class Composition
 	}
 	
 	/**
-	 * add
+	 * Add a glyph to the composition.
 	 */
 	public void add(Glyph g)
 	{
@@ -591,21 +648,15 @@ class Composition
 	}
 	
 	/**
-	 * insert
+	 * Get the glyphs in the composition.
 	 */
-	public void insert(Glyph g)
-	{
-		glyphs.add(g);
-	}
-	
 	public List<Glyph> getGlyphs() {
 		return this.glyphs;
 	}
 
-	public void  removeLast() {
-		glyphs.remove(glyphs.size() - 1);
-	}
-
+	/**
+	 * Set the glyphs in the composition.
+	 */
 	public void setGlyphs(List<Glyph> glyphs) {
 		this.glyphs = glyphs;
 	}
@@ -613,6 +664,9 @@ class Composition
 }
 
 
+/*
+ * CharGlyph class used to store the character and position of a character glyph.
+ */
 class CharGlyph extends Glyph 
 {
 	private char c;
@@ -623,7 +677,7 @@ class CharGlyph extends Glyph
 	private boolean gramaticallyCorrect;
 	
 	/**
-	 * Ctor
+	 * Constructor for CharGlyph class.
 	 */
 	public CharGlyph(char c) 
 	{
@@ -632,6 +686,9 @@ class CharGlyph extends Glyph
 		this.gramaticallyCorrect = true;
 	}
 
+	/**
+	 * getters and setters
+	 */
 	public void setPos(Point pos){this.pos = pos;}
 	public Point getPos(){return pos;}
 	public RGB getColor(){return color;}
@@ -642,17 +699,13 @@ class CharGlyph extends Glyph
 	public void setSize(int size){this.size = size;}
 	public void setGramaticallyCorrect(boolean b){this.gramaticallyCorrect = b;}
 	public boolean getGramaticallyCorrect() {return gramaticallyCorrect; }
-	
-	/**
-	 * gets
-	 */
 	public char getChar(){return c;}
 
 }
 
 
 /**
- * Image Glyph
+ * ImageGlyph class used to store the image and position of an image glyph.
  */
 class ImageGlyph extends Glyph
 {
@@ -664,7 +717,7 @@ class ImageGlyph extends Glyph
 	private Point endPoint;
 	
 	/**
-	 * Ctor
+	 * Constructor for ImageGlyph class.	
 	 */
 	public ImageGlyph(String fileName, int width, int height) 
 	{
@@ -672,12 +725,11 @@ class ImageGlyph extends Glyph
 		this.fileName = fileName;
 		this.width = width;
 		this.height = height;
-		// create the image using SWT
 		image = new Image(null, fileName);
 	}
 	
 	/**
-	 * gets
+	 * getters and setters
 	 */
 	public String getFileName(){return fileName;}
 	public int getWidth(){return width;}
@@ -695,7 +747,7 @@ class ImageGlyph extends Glyph
 
 
 /**
- * Rectangle Glyph
+ * RectGlyph class used to store the position and dimensions of a rectangle glyph.
  */
 class RectGlyph extends Glyph
 {
@@ -706,6 +758,9 @@ class RectGlyph extends Glyph
 	private RGB fillColor;
 	private RGB borderColor;
 
+	/**
+	 * Constructor for RectGlyph class.
+	 */
 	public RectGlyph() 
 	{
 		super();
@@ -715,10 +770,11 @@ class RectGlyph extends Glyph
 		borderColor = new RGB(0, 0, 0);
 	}
 
+	/**
+	 * getters and setters
+	 */
 	public void setPos(Point pos){this.pos = pos;}
 	public Point getPos(){return pos;}
-
-
 	public void setWidth(int width){this.width = width;}
 	public void setHeight(int height){this.height = height;}
 	public int getWidth(){return width;}
@@ -733,7 +789,7 @@ class RectGlyph extends Glyph
 }
 
 /**
- * Circle Glyph
+ * CircleGlyph class used to store the position and dimensions of a circle glyph.
  */
 class CircleGlyph extends Glyph
 {
@@ -743,6 +799,9 @@ class CircleGlyph extends Glyph
     private RGB fillColor;
     private RGB borderColor;
 
+	/**
+	 * Constructor for CircleGlyph class.
+	 */
     public CircleGlyph() 
     {
         super();
@@ -751,10 +810,11 @@ class CircleGlyph extends Glyph
         borderColor = new RGB(0, 0, 0);
     }
 
+	/**
+	 * getters and setters
+	 */
     public void setPos(Point pos){this.pos = pos;}
     public Point getPos(){return pos;}
-
-
     public void setRadius(int radius){this.radius = radius;}
     public int getRadius(){return radius;}
     public void setEndPoint(Point p) {this.endPoint = p;}
@@ -767,7 +827,7 @@ class CircleGlyph extends Glyph
 }
 
 /**
- * Triangle Glyph 
+ * TriangleGlyph class used to store the position and dimensions of a triangle glyph.
  */
 class TriangleGlyph extends Glyph
 {
@@ -778,6 +838,9 @@ class TriangleGlyph extends Glyph
     private RGB fillColor;
     private RGB borderColor;
 
+	/**
+	 * Constructor for TriangleGlyph class.
+	 */
     public TriangleGlyph() 
     {
         super();
@@ -787,9 +850,11 @@ class TriangleGlyph extends Glyph
         borderColor = new RGB(0, 0, 0);
     }
 
+	/**
+	 * getters and setters
+	 */
     public void setPos(Point pos){this.pos = pos;}
     public Point getPos(){return pos;}
-
     public void setWidth(int width){this.width = width;}
     public void setHeight(int height){this.height = height;}
     public int getWidth(){return width;}
@@ -804,13 +869,18 @@ class TriangleGlyph extends Glyph
 }
 
 
+/**
+ * SpellChecker class used to check the spelling of the words in the document.
+ */
 class SpellChecker 
 {
 	private static SpellChecker instance = null;
-	
 	private static final String DICTIONARY = "dictionary.txt";
 	private Set<String> dict;
 	
+	/**
+	 * getInstance method used to get the instance of the SpellChecker class.
+	 */
 	public static SpellChecker getInstance()
 	{
 		if (instance == null)
@@ -820,6 +890,9 @@ class SpellChecker
 		return instance;
 	}
 	
+	/**
+	 * Constructor for SpellChecker class.
+	 */
 	private SpellChecker() {
 		dict = new HashSet<String>();
 		// open the dictionary
@@ -847,6 +920,9 @@ class SpellChecker
 				}
 	}
 	
+	/**
+	 * check method used to check the spelling of the words in the document.
+	 */
 	public boolean isCorrect(String word)
 	{
 		// strip out punctuation at the end of the word
@@ -869,6 +945,7 @@ class SpellChecker
 
 
 /**
+ * TimeMachine class employs a Singleton design pattern. 
  * This class is used to implement the redo and undo functionality
  */
 class TimeMachine {
@@ -881,6 +958,9 @@ class TimeMachine {
 	int index;
 	private static TimeMachine instance;
 	
+	/**
+	 * getInstance method used to get the instance of the TimeMachine class.
+	 */
 	public static TimeMachine getInstance()
 	{
 		if (instance == null)
@@ -890,6 +970,9 @@ class TimeMachine {
 		return instance;
 	}
 	
+	/**
+	 * Constructor for TimeMachine class.
+	 */
 	private TimeMachine()
 	{
 		cursors = new ArrayList<Point>();
@@ -906,7 +989,11 @@ class TimeMachine {
 		glyphs_lists.add(new ArrayList<Glyph>());
 	}
 
-	public void addState(Point cursor, List<Point> previousPositions, int yOffSet, List<Integer> previousYOffSets, List<Glyph> glyphs)
+	/**
+	 * addState method used to add the state of the document to the TimeMachine.
+	 */
+	public void addState(Point cursor, List<Point> previousPositions, int yOffSet, 
+	List<Integer> previousYOffSets, List<Glyph> glyphs)
 	{
 		// check if size is greater than 10, if it is replace oldest state with new one
 		if (cursors.size() > 10)
@@ -936,7 +1023,7 @@ class TimeMachine {
 			List<Integer> previousYOffSets_copy = new ArrayList<Integer>();
 			for (Integer i : previousYOffSets)
 			{
-				previousYOffSets_copy.add(new Integer(i));
+				previousYOffSets_copy.add(Integer.valueOf(i));
 			}
 			List<Glyph> glyphs_copy = new ArrayList<Glyph>();
 			for (Glyph g : glyphs)
@@ -946,7 +1033,7 @@ class TimeMachine {
 			// add the new state
 			cursors.add(new Point(cursor.getX(), cursor.getY()));
 			previousPositions_lists.add(previousPositions_copy);
-			yOffSets.add(new Integer(yOffSet));
+			yOffSets.add(Integer.valueOf(yOffSet));
 			previousYOffSets_lists.add(previousYOffSets_copy);
 			glyphs_lists.add(glyphs_copy);	
 			index = cursors.size() - 1;
@@ -962,7 +1049,7 @@ class TimeMachine {
 			List<Integer> previousYOffSets_copy = new ArrayList<Integer>();
 			for (Integer i : previousYOffSets)
 			{
-				previousYOffSets_copy.add(new Integer(i));
+				previousYOffSets_copy.add(Integer.valueOf(i));
 			}
 			List<Glyph> glyphs_copy = new ArrayList<Glyph>();
 			for (Glyph g : glyphs)
@@ -972,37 +1059,27 @@ class TimeMachine {
 			// add the new state
 			cursors.add(new Point(cursor.getX(), cursor.getY()));
 			previousPositions_lists.add(previousPositions_copy);
-			yOffSets.add(new Integer(yOffSet));
+			yOffSets.add(Integer.valueOf(yOffSet));
 			previousYOffSets_lists.add(previousYOffSets_copy);
 			glyphs_lists.add(glyphs_copy);	
 			index++;
 		}
 	}
 
+	/**
+	 * undo method used to undo the last action.
+	 */
 	public void undo()
 	{
 		if (index > 0)
 		{
 			index--;
 		}
-		
-		// print the current glyph list
 	}
 
-	public void printGlyphs() {
-	    System.out.println("size undo: " + cursors.size());
-        System.out.println("undo index: " + index);
-		System.out.println("==================================");
-		for (int i = 0; i < glyphs_lists.size() ; i++) {
-			for (Glyph g : glyphs_lists.get(i)) {
-			    CharGlyph cg = (CharGlyph)g;
-				System.out.print(cg.getChar());
-			}
-			System.out.println();
-		}
-		System.out.println("==================================");
-	}
-
+	/**
+	 * redo method used to redo the last action.
+	 */
 	public void redo()
 	{
 		if (index < cursors.size() - 1)
@@ -1011,36 +1088,57 @@ class TimeMachine {
 		}
 	}
 
+	/**
+	 * getCursor method used to get the cursor position.
+	 */
 	public Point getCursor()
 	{
 		return cursors.get(index);
 	}
 
+	/**
+	 * getPreviousPositions method used to get the previous positions.
+	 */
 	public List<Point> getPreviousPositions()
 	{
 		return previousPositions_lists.get(index);
 	}
 
+	/**
+	 * getYOffSet method used to get the yOffSet.
+	 */
 	public int getYOffSet()
 	{
 		return yOffSets.get(index);
 	}
 
+	/**
+	 * getPreviousYOffSets method used to get the previous yOffSets.
+	 */
 	public List<Integer> getPreviousYOffSets()
 	{
 		return previousYOffSets_lists.get(index);
 	}
 
+	/**
+	 * getGlyphs method used to get the glyphs.
+	 */
 	public List<Glyph> getGlyphs()
 	{
 		return glyphs_lists.get(index);
 	}
 
+	/**
+	 * canUndo method used to check if the TimeMachine can undo.
+	 */
 	public boolean canUndo()
 	{
 		return index > 0;
 	}
 
+	/**
+	 * canRedo method used to check if the TimeMachine can redo.
+	 */
 	public boolean canRedo()
 	{
 		return index < cursors.size() - 1;
